--- a/app/src/main/res/layout/store_listadapter.xml
+++ b/app/src/main/res/layout/store_listadapter.xml
@@ -12,6 +12,37 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="horizontal"
+        android:layoutDirection="ltr"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/reyal"
+            android:gravity="center"
+            android:layout_marginRight="3dp"
+            android:textColor="@color/colorPrimary"
+
+            />
+        <TextView
+            android:id="@+id/tv_productprice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="3dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+
+            />
+
+    </LinearLayout>
+
 
         <ImageView
             android:id="@+id/imageView2"
